fixed spacing on hamburger menu and size/spacing of gif logo

--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ a, a:visited, a:hover, a:active {
   width: 100vw;
   height: 100px;
   display: flex;
-  justify-content: flex-end;
+  justify-content:space-between;
   
 }
 
@@ -56,7 +56,7 @@ a, a:visited, a:hover, a:active {
   justify-content: space-between;
   width: 60px;
   height: 50px;
-  margin: 30px 30px 0 0;
+  margin: 40px 30px 0 0;
 
 }
 
